--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         </div>
       </div>
     </section>
-
+    <div class="mt-6">
+		<a href="https://www.codabench.org/competitions/12259/#/participate-tab" target="_blank" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-lg shadow-lg text-dark-blue bg-cyan hover:bg-teal-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500 transition duration-300">Join the Competition on Codabench</a>
+    </div>
+      
     <main class="container my-4">
       <section class="overview">
         <h2 class="h4">Overview</h2>
