Updating the home page.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-md-6">
           <h5 class="fw-bold">📋 The Task</h5>
           <ul class="mb-0">
-            <li><strong>Magnification:</strong> 8× to 16× Super-Resolution</li>
+            <li><strong>Magnification:</strong> 4x, 8× to 16× Super-Resolution</li>
             <li><strong>Input:</strong> Degraded real-world video frames</li>
             <li><strong>Key Constraint:</strong> Hallucination-free, OCR-recoverable output</li>
           </ul>
@@ -101,10 +101,10 @@
         <div class="col-lg-4 text-center">
             <!-- Replace 'public/images/french_plate_example.png' with your actual image path -->
             <img src="public/images/Logo_challenge.png" 
-                 alt="Example of a standard French license plate (AA-123-AA format)" 
+                 alt="Example of a standard French license plate" 
                  class="img-fluid rounded border mt-2 mt-lg-0" 
                  style="max-height: 180px;">
-            <p class="text-muted small mt-2"><em>Example of the current French license plate format (AA-123-AA).</em></p>
+            <p class="text-muted small mt-2"><em>Example of the current French license plate format.</em></p>
         </div>
         </div>
     </section>
