updating the timeline page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-md-6">
           <h5 class="fw-bold">📋 The Task</h5>
           <ul class="mb-0">
-            <li><strong>Magnification:</strong> 4x, 8× to 16× Super-Resolution</li>
+            <li><strong>Magnification:</strong> 4×, 8× to 16× Super-Resolution</li>
             <li><strong>Input:</strong> Degraded real-world video frames</li>
             <li><strong>Key Constraint:</strong> Hallucination-free, OCR-recoverable output</li>
           </ul>
@@ -147,20 +147,7 @@
             <li>Upon approval of your registration, you will receive access instructions for the dataset and CodaBench.</li>
         </ol>
     </section>
-    <!-- End of New Section -->
 
-    <section class="overview">
-      <h2 class="h4">Evaluation Protocol</h2>
-      <p><strong>Stage 1 — Automated Screening:</strong> An external OCR engine (fixed and disclosed) computes Character
-        Error Rate (CER) as normalized Levenshtein distance; a Visual Quality Metric (VQM) such as BRISQUE/NIQE/MUSIQ is
-        also computed. Combined score:</p>
-      <pre class="mb-2">S = α · CER + β · VQM</pre>
-      <p>The top submissions advance to Stage 2.</p>
-      <p><strong>Stage 2 — Expert Evaluation:</strong> A panel evaluates visual realism, plausibility, conformity to
-        official plate structure, geometry preservation, absence of hallucinations/artifacts, and overall fidelity.
-        <strong>Winners are selected solely via expert evaluation.</strong></p>
-    </section>
-  </main>
 
   <footer class="bg-dark text-white py-4 mt-5">
     <div class="container">
