Update logo footer

--- a/prizes.html
+++ b/prizes.html
@@ -202,7 +202,7 @@
             <small>ANR-22-CE39-0006</small>
           </div>
           <div class="col-md-4 text-center mb-3 mb-md-0">
-            <img src="public/images/logo_part.png" alt="Partner Logos" class="img-fluid" />
+            <img src="public/images/logo_part.png" alt="Partner Logos" class="img-fluid w-50" />
           </div>
           <div class="col-md-4 text-md-end">
             <small>&copy; XLPSR Challenge • IEEE ICIP 2026 • Tampere, Finland</small>
