--- a/dataset.html
+++ b/dataset.html
@@ -78,10 +78,10 @@
             <div class="info-card">
               <h5 class="d-flex align-items-center"><i class="fas fa-video me-2"></i> Dataset Characteristics</h5>
               <ul class="dataset-features">
-                <li>Short real-world video clips (up to 10s) of moving vehicles with <strong>French license plates</strong></li>
+                <li>Short real-world video clips (up to 5s) of moving vehicles with <strong>French license plates</strong></li>
                 <li>Multiple acquisition devices (consumer cameras, surveillance cameras, smartphones)</li>
                 <li>Wide range of distances (10–100 meters)</li>
-                <li>Variable lighting conditions (day, night, transitional)</li>
+                <li>Variable lighting conditions</li>
                 <li>Weather variation (clear, cloudy)</li>
                 <li>Large viewpoint variability (frontal, oblique, steep angle)</li>
                 <li>Strong natural degradations (motion blur, sensor noise, compression artifacts)</li>
