--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="row align-items-start">
         <div class="col-lg-8">
             <p>
-                The Extreme In-The-Wild License Plate Super-Resolution (XLPSR) Challenge establishes a benchmark for reconstructing readable <strong>French license plates</strong> from low-resolution, degraded video frames. Participants must develop super-resolution models capable of 8× to 16× magnification that address authentic degradations like motion blur, compression artifacts, and noise, specific to real-world acquisition scenarios.
+                The Extreme In-The-Wild License Plate Super-Resolution (XLPSR) Challenge establishes a benchmark for reconstructing readable <strong>French license plates</strong> from low-resolution, degraded video frames. Participants must develop super-resolution models that address authentic degradations like motion blur, compression artifacts, and noise, specific to real-world acquisition scenarios.
             </p>
             <p>
                 The core requirement is the accurate, <strong>hallucination-free</strong> recovery of the alphanumeric characters and the standardized format of French plates, ensuring outputs are reliable for downstream Optical Character Recognition (OCR). Solutions may process frames independently or exploit temporal coherence in video. The use of auxiliary modules for denoising, deblurring, or dehazing is permitted within the model pipeline.
