Updates team page

--- a/team.html
+++ b/team.html
@@ -72,8 +72,8 @@
                 <div class="team-member-img placeholder-img">
                   CL
                 </div>
-                <img src="public/images/xlim_logo.png" alt="XLIM Logo" class="org-logo mt-2" style="max-height: 35px;">
-                <img src="public/images/univ_poitiers_logo.png" alt="Univ Poitiers Logo" class="org-logo mt-2" style="max-height: 35px;">
+                <!-- <img src="public/images/xlim_logo.png" alt="XLIM Logo" class="org-logo mt-2" style="max-height: 35px;">
+                <img src="public/images/univ_poitiers_logo.png" alt="Univ Poitiers Logo" class="org-logo mt-2" style="max-height: 35px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Chaker LARABI</h4>
@@ -95,7 +95,7 @@
                 <div class="team-member-img placeholder-img">
                   DN
                 </div>
-                <img src="public/images/ektacom_logo.png" alt="Ektacom Logo" class="org-logo mt-2" style="max-height: 30px;">
+                <!-- <img src="public/images/ektacom_logo.png" alt="Ektacom Logo" class="org-logo mt-2" style="max-height: 30px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Didier Nicholson</h4>
@@ -117,8 +117,8 @@
                 <div class="team-member-img placeholder-img">
                   AS
                 </div>
-                <img src="public/images/xlim_logo.png" alt="XLIM Logo" class="org-logo mt-2" style="max-height: 35px;">
-                <img src="public/images/univ_poitiers_logo.png" alt="Univ Poitiers Logo" class="org-logo mt-2" style="max-height: 35px;">
+                <!-- <img src="public/images/xlim_logo.png" alt="XLIM Logo" class="org-logo mt-2" style="max-height: 35px;">
+                <img src="public/images/univ_poitiers_logo.png" alt="Univ Poitiers Logo" class="org-logo mt-2" style="max-height: 35px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Abderrezzaq Sendjasni</h4>
@@ -140,7 +140,7 @@
                 <div class="team-member-img placeholder-img">
                   MV
                 </div>
-                <img src="public/images/ektacom_logo.png" alt="Ektacom Logo" class="org-logo mt-2" style="max-height: 30px;">
+                <!-- <img src="public/images/ektacom_logo.png" alt="Ektacom Logo" class="org-logo mt-2" style="max-height: 30px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Melan Vijayaratnam</h4>
@@ -162,7 +162,7 @@
                 <div class="team-member-img placeholder-img">
                   GF
                 </div>
-                <img src="public/images/ens_logo.png" alt="ENS Paris-Saclay Logo" class="org-logo mt-2" style="max-height: 40px;">
+                <!-- <img src="public/images/ens_logo.png" alt="ENS Paris-Saclay Logo" class="org-logo mt-2" style="max-height: 40px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Gabriele Facciolo</h4>
@@ -184,7 +184,7 @@
                 <div class="team-member-img placeholder-img">
                   AC
                 </div>
-                <img src="public/images/police_scientifique_logo.png" alt="Police Scientifique Logo" class="org-logo mt-2" style="max-height: 40px;">
+                <!-- <img src="public/images/police_scientifique_logo.png" alt="Police Scientifique Logo" class="org-logo mt-2" style="max-height: 40px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Alexandre CILIA</h4>
@@ -206,7 +206,7 @@
                 <div class="team-member-img placeholder-img">
                   FP
                 </div>
-                <img src="public/images/police_scientifique_logo.png" alt="Police Scientifique Logo" class="org-logo mt-2" style="max-height: 40px;">
+                <!-- <img src="public/images/police_scientifique_logo.png" alt="Police Scientifique Logo" class="org-logo mt-2" style="max-height: 40px;"> -->
               </div>
               <div class="card-body p-0 pt-3">
                 <h4 class="team-member-name">Fanny PAGÈS</h4>
