--- a/registration.html
+++ b/registration.html
@@ -145,7 +145,7 @@
         </div>
         
         <div class="rules-card mt-4 border-warning">
-          <h4 class="d-flex align-items-center text-warning"><i class="fas fa-gavel me-2"></i> Official Rule #7: Method Freedom</h4>
+          <h4 class="d-flex align-items-center text-warning"><i class="fas fa-gavel me-2"></i> Method Freedom</h4>
           <div class="row">
             <div class="col-lg-8">
               <p><strong>There is no restriction on the number of frames used per sequence.</strong> Participants may:</p>
