Update lp format

--- a/dataset.html
+++ b/dataset.html
@@ -112,7 +112,7 @@
           <div class="col-lg-6">
             <div class="info-card">
               <h5 class="d-flex align-items-center"><i class="fas fa-map-marker-alt me-2"></i> Acquisition Circuit</h5>
-              <p>The dataset was acquired at the <strong>Saint-Laurent-de-Mûre</strong> circuit in France. The highlighted portion of the circuit below was used for capturing the video sequences with vehicles in motion under controlled yet realistic conditions.</p>
+              <p>The dataset was acquired at the <strong>Saint-Laurent-de-Mûre</strong> circuit in France. The highlighted portion of the circuit below was used for capturing the video sequences with vehicles in motion under realistic conditions.</p>
               <div class="text-center my-3">
                 <img src="public/images/circuit_Lyon.png" alt="Saint-Laurent-de-Mûre acquisition circuit" class="img-fluid rounded border" style="max-height: 300px;">
                 <p class="text-muted small mt-2"><em>Figure 1: Saint-Laurent-de-Mûre circuit with highlighted acquisition zone.</em></p>
@@ -130,9 +130,7 @@
                 <li><strong>Professional cameras:</strong> Blackmagic micro studio 4K (x2), Panasonic Lumix DMC-G70</li>
                 <li><strong>Specialized:</strong> Hikvision fisheye camera (severe distortion), infrared camera</li>
               </ul>
-              <div class="alert alert-secondary mt-2 p-2">
-                <small><i class="fas fa-info-circle me-1"></i> Note: Fisheye and infrared sequences are included to represent challenging edge cases, though detection may be difficult.</small>
-              </div>
+             
             </div>
           </div>
         </div>
@@ -146,7 +144,7 @@
           <div class="col-lg-8">
             <div class="info-card text-center">
               <h5 class="d-flex align-items-center justify-content-center"><i class="fas fa-car me-2"></i> French License Plate Format</h5>
-              <p>The dataset exclusively contains <strong>French license plates</strong> following the standard format: <code>AA-123-AA</code> (2 letters, 3 digits, 2 letters).</p>
+            <p>The dataset exclusively contains old and new <strong>French license plates</strong>. The format for old license plates <code>123-AAA-12</code> or <code>1234-AA-12</code> (3 or 4 degits, 2 or 3 letters, 2 degits). And the format for new license late is: <code>AA-123-AA</code> (2 letters, 3 digits, 2 letters).</p>
               
               <div class="text-center my-4">
                 <img src="public/images/Grand_challenge_examples.png" 
