--- a/dataset.html
+++ b/dataset.html
@@ -158,7 +158,7 @@
         </div>
       </section>
 
-      <!-- NEW SECTION: Dataset Composition -->
+      <!-- NEW SECTION: Dataset Composition
       <section class="dataset-section">
         <h2 class="h3 section-title">Dataset Composition</h2>
         <div class="row">
@@ -187,7 +187,7 @@
         </div>
       </div>
 
-      </section>
+      </section> -->
 
       <!-- NEW SECTION: File Format Specification -->
       <section class="dataset-section">
@@ -241,9 +241,11 @@ dataset/
           <p class="mb-0">The prediction <code>prediction.csv</code> should incllude the sequence IDs and the coresponding preidcted license plate text:</p>
           <pre class="bg-light p-2 mt-2 rounded border" style="font-size: 0.85rem; max-width: 400px;">
 sequence_id,license_plate
-seq_001,AB-123-CD
-seq_002,EF-456-GH
-...</pre>
+seq_001,AB123CD
+seq_002,EF456GH
+seq_002,457DEX16
+...
+</pre>
         </div>
       </section>
 
