--- a/dataset.html
+++ b/dataset.html
@@ -268,7 +268,6 @@ seq_002,457DEX16
                   <li>Complete low-resolution video frames</li>
                   <li>Full ground-truth license plate labels</li>
                   <li>Detection coordinates in JSON format</li>
-                  <li>Degradation metadata</li>
                 </ul>
                 <p class="mb-0"><strong>Purpose:</strong> Allows participants to develop, test, and validate their models locally before submission.</p>
               </div>
@@ -291,9 +290,10 @@ seq_002,457DEX16
                 <p><strong>405 sequences (4,050 images)</strong></p>
                 <ul>
                   <li>Low-resolution frames only (no ground truth)</li>
-                  <li>Submit predictions via CSV</li>
-                  <li>Real-time leaderboard ranking</li>
-                  <li>Limited submissions per day</li>
+                  <li>Detection coordinates in JSON format</li>
+                  <!-- <li>Submit predictions via CSV</li> -->
+                  <!-- <li>Real-time leaderboard ranking</li> -->
+                  <!-- <li>Limited submissions per day</li> -->
                 </ul>
                 <p class="mb-0"><strong>Purpose:</strong> Enables participants to benchmark against others and track progress on the public leaderboard.</p>
               </div>
@@ -313,10 +313,10 @@ seq_002,457DEX16
               <h4>Blind Test Set</h4>
               <p class="dataset-subtitle">For Final Evaluation</p>
               <div class="dataset-content">
-                <p><strong>88 sequences (880 images)</strong></p>
+                <p><strong>88 unreleazed sequences (880 images)</strong></p>
                 <ul>
                   <li>16 completely unseen license plates</li>
-                  <li>No ground truth released</li>
+                  <!-- <li>No ground truth released</li> -->
                   <li>Similar diversity to development set</li>
                   <li>Evaluated on organizers' servers</li>
                 </ul>
