--- a/dataset.html
+++ b/dataset.html
@@ -343,7 +343,7 @@ seq_002,457DEX16
                 <li><strong>Model constraints:</strong> No restrictions on model architecture, size, or training methodology.</li>
                 <li><strong>Pre-trained models:</strong> Use of publicly available pre-trained models is allowed and encouraged.</li>
                 <li><strong>Data augmentation:</strong> Participants may augment the provided data with synthetic degradations.</li>
-                <li><strong>Submission requirements:</strong> Final models must be submitted as Docker containers for reproducibility (top teams only).</li>
+                <li><strong>Submission requirements:</strong> Final models must be submitted as Docker containers for reproducibility (top teams and on invitation only).</li>
               </ul>
             </div>
           </div>
@@ -354,7 +354,7 @@ seq_002,457DEX16
               <ul class="dataset-features">
                 <li>The blind test set will <strong>not</strong> be released to participants at any time</li>
                 <li>Public leaderboard rankings are indicative only</li>
-                <li>Final ranking is based exclusively on blind test set performance</li>
+                <li>Final ranking is based exclusively on blind test set performance and expert evaluation</li>
                 <li>All submissions must follow the <code>sequence_id,predicted_lp</code> CSV format</li>
                 <li>Dataset license agreement must be signed during registration</li>
               </ul>
