--- a/contact.html
+++ b/contact.html
@@ -304,11 +304,11 @@ IEEE ICIP 2026 • Tampere, Finland
     setTimeout(() => {
       try {
         // Create and open mailto link
-        const mailtoLink = `mailto:${primaryContact}&subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+        const mailtoLink = `mailto:${primaryContact}?&subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
         window.location.href = mailtoLink;
         
         // Success message
-        alert('✅ Message prepared! Your email client will open.\n\n📎 The organizing team has been CC\'d.\n📝 Please review and send the email.');
+        alert('✅ Message prepared! Your email client will open.\n\n📎.\n📝 Please review and send the email.');
         
         // Reset form
         contactForm.reset();
