--- a/prizes.html
+++ b/prizes.html
@@ -66,12 +66,12 @@
         <div class="sponsors-grid">
           <div class="sponsor-container text-center">
             <img src="public/images/logo_anr_improved.png" alt="ANR-IMPROVED" class="sponsor-logo main-sponsor" />
-            <p class="mt-2 fw-bold">Main Sponsor</p>
+            <!-- <p class="mt-2 fw-bold">Main Sponsor</p> -->
           </div>
           
           <div class="sponsor-container text-center">
             <img src="public/images/Logo-SNPS-Bleu.jpg" alt="SNPS" class="sponsor-logo" />
-            <p class="mt-2 fw-bold">Institutional Partner</p>
+            <!-- <p class="mt-2 fw-bold">Institutional Partner</p> -->
           </div>
         </div>
         
