--- a/team.html
+++ b/team.html
@@ -288,6 +288,8 @@
         'CL': 'public/images/team_pic/chaker.png',
         'AS': 'public/images/team_pic/abderrezzaq.png',
         'GF': 'public/images/team_pic/gabriele.jpg',
+        'MV': 'public/image/team_pic/melan.jpeg',
+
         // Add others as they become available
       };
 
