Update task details and conference information

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-md-6">
           <h5 class="fw-bold">📋 The Task</h5>
           <ul class="mb-0">
-            <li><strong>Magnification:</strong> License plate Super-Resolution</li>
+            <li><strong>Magnification:</strong> License Plate Super-Resolution (8×–16×)</li>
             <li><strong>Input:</strong> Degraded real-world video frames</li>
             <li><strong>Key Constraint:</strong> Hallucination-free, OCR-recoverable output</li>
           </ul>
@@ -73,18 +73,17 @@
         <div class="col-md-6">
           <h5 class="fw-bold">🚀 Get Involved</h5>
           <ul class="mb-0">
-            <li><strong>Conference:</strong> Part of <a href="https://2026.ieeeicip.org/" target="_blank">IEEE ICIP
-                2026</a></li>
-            <li><strong>Status:</strong> Details forthcoming</li>
-            <li><strong>Next Step:</strong> Check the <a href="timeline.html">Timeline</a> & <a
-                href="registration.html">Rules</a> pages</li>
+            <li><strong>Conference:</strong> Part of <a href="https://2026.ieeeicip.org/" target="_blank">IEEE ICIP 2026</a></li>
+            <li><strong>Platform:</strong> <a href="https://www.codabench.org/competitions/13877/" target="_blank" class="fw-bold text-success bg-success bg-opacity-10 p-1 rounded">🤖 XLPSR on CodaBench ➚</a></li>
+            <li><strong>Status:</strong> Registration open</li>
+            <li><strong>Next Step:</strong> Check the <a href="timeline.html">Timeline</a> & <a href="registration.html">Rules</a> pages</li>
           </ul>
         </div>
       </div>
     </div>
   </section>
   <!-- End of New Section -->
-
+  
   <main class="container my-4">
 
    <section class="overview">
